--- a/users-microservice/src/main/resources/application.properties
+++ b/users-microservice/src/main/resources/application.properties
@@ -1,2 +1,5 @@
-server.servlet.contextPath=/user-microservice/rest
-server.port = 8080
+#porta aleatória = 0
+server.port = 0
+server.servlet.contextPath = /user-microservice/rest
+spring.application.name = user-microservices-rest
+eureka.client.serviceUrl.defaultZone = ${EUREKA_URI:http://localhost:8761/service-discovery/eureka}
