Rest and eureka configs

--- a/users-microservice/src/main/resources/application.properties
+++ b/users-microservice/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 #porta aleatória = 0
 server.port = 0
-server.servlet.contextPath = /user-microservice/rest
-spring.application.name = user-microservices-rest
-eureka.client.serviceUrl.defaultZone = ${EUREKA_URI:http://localhost:8761/service-discovery/eureka}
+server.servlet.contextPath = /user
+eureka.client.serviceUrl.defaultZone = ${EUREKA_URI:http://localhost:8761/eureka}
