--- a/users-microservice/src/main/resources/application.properties
+++ b/users-microservice/src/main/resources/application.properties
@@ -1,4 +1,14 @@
 #porta aleatória = 0
 server.port = 0
-server.servlet.contextPath = /user
+spring.application.name = user
 eureka.client.serviceUrl.defaultZone = ${EUREKA_URI:http://localhost:8761/eureka}
+
+eureka.client.healthcheck.enabled = true
+management.endpoint.health.showDetails = ALWAYS
+management.endpoint.info.showDetails = "ALWAYS"
+# management.endpoints.web.exposure.include = heapdump,liquibase,loggers,prometheus,threaddump,info,metrics,health
+
+
+# server.servlet.contextPath = /user
+# eureka.instance.statusPageUrlPath = ${server.servlet.contextPath}/info
+# eureka.instance.healthCheckUrlPath = ${server.servlet.contextPath}/health
