--- a/users-microservice/pom.xml
+++ b/users-microservice/pom.xml
@@ -26,6 +26,7 @@
 	                <artifactId>spring-cloud-dependencies</artifactId>
 	                <version>Finchley.RELEASE</version>
 	                <type>pom</type>
+	                <scope>import</scope>
 	        </dependency>
 	    </dependencies>
     </dependencyManagement>
@@ -35,12 +36,17 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+	    </dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-netflix-eureka-client -->
 		<dependency>
 		    <groupId>org.springframework.cloud</groupId>
 		    <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-		    <version>2.1.1.RELEASE</version>
 		</dependency>
 		
 		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-actuator -->
@@ -52,7 +58,6 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config</artifactId>
-			<version>2.1.1.RELEASE</version>
 		</dependency>
 		
 		<dependency>
