--- a/users-microservice/src/main/resources/application.properties
+++ b/users-microservice/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 #porta aleatória = 0
-server.port = 0
+server.port = 8090
 eureka.client.serviceUrl.defaultZone = ${EUREKA_URI:http://localhost:8761/eureka}
 
 eureka.client.healthcheck.enabled = true
 management.endpoint.health.showDetails = ALWAYS
-management.endpoint.info.showDetails = "ALWAYS"
-# management.endpoints.web.exposure.include = heapdump,liquibase,loggers,prometheus,threaddump,info,metrics,health
+eureka.instance.instanceId = ${spring.application.name}:${random.value}
 
+# management.endpoints.web.exposure.include = heapdump,liquibase,loggers,prometheus,threaddump,info,metrics,health
 
 # server.servlet.contextPath = /user
 # eureka.instance.statusPageUrlPath = ${server.servlet.contextPath}/info
