--- a/users-microservice/src/main/resources/application.properties
+++ b/users-microservice/src/main/resources/application.properties
@@ -5,6 +5,7 @@ eureka.client.serviceUrl.defaultZone = ${EUREKA_URI:http://localhost:8761/eureka
 eureka.client.healthcheck.enabled = true
 management.endpoint.health.showDetails = ALWAYS
 eureka.instance.instanceId = ${spring.application.name}:${random.value}
+application.user.persistence.service = user-persistence-service
 
 # management.endpoints.web.exposure.include = heapdump,liquibase,loggers,prometheus,threaddump,info,metrics,health
 
