--- a/users-microservice/pom.xml
+++ b/users-microservice/pom.xml
@@ -55,6 +55,13 @@
 		    <artifactId>spring-cloud-starter-hystrix</artifactId>
 		    <version>1.4.6.RELEASE</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-hystrix-dashboard -->
+		<dependency>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-starter-hystrix-dashboard</artifactId>
+		    <version>1.4.6.RELEASE</version>
+		</dependency>		
 
 		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-actuator -->
 		<dependency>
