--- a/users-microservice/src/main/resources/application.properties
+++ b/users-microservice/src/main/resources/application.properties
@@ -1,11 +1,16 @@
 #porta aleatória = 0
 server.port = 8090
-eureka.client.serviceUrl.defaultZone = ${EUREKA_URI:http://localhost:8761/eureka}
+eureka.client.serviceUrl.defaultZone = ${EUREKA_URI:http://10.0.2.84:8761/eureka}
 
 eureka.client.healthcheck.enabled = true
 management.endpoint.health.showDetails = ALWAYS
 eureka.instance.instanceId = ${spring.application.name}:${random.value}
 application.user.persistence.service = user-persistence-service
+hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds = 20000
+hystrix.command.default.circuitBreaker.enabled = true
+# hystrix.command.default.circuitBreaker.errorThresholdPercentage = 90
+hystrix.command.default.circuitBreaker.requestVolumeThreshold = 5
+hystrix.command.default.circuitBreaker.sleepWindowInMilliseconds = 30000
 
 # management.endpoints.web.exposure.include = heapdump,liquibase,loggers,prometheus,threaddump,info,metrics,health
 
