--- a/users-microservice/src/main/resources/application.properties
+++ b/users-microservice/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #porta aleatória = 0
 server.port = 8090
-eureka.client.serviceUrl.defaultZone = ${EUREKA_URI:http://10.0.2.84:8761/eureka}
+eureka.client.serviceUrl.defaultZone = http://eureka-peer1:8761/eureka/,http://eureka-peer2:8762/eureka/,http://eureka-peer3:8763/eureka/,http://eureka-peer4:8764/eureka/
 
 eureka.client.healthcheck.enabled = true
 management.endpoint.health.showDetails = ALWAYS
