--- a/users-microservice/src/main/resources/application.properties
+++ b/users-microservice/src/main/resources/application.properties
@@ -1,11 +1,14 @@
 #porta aleatória = 0
 server.port = 8090
+
+# eureka.client.serviceUrl.defaultZone = http://eureka-peer1:8764/eureka/
 eureka.client.serviceUrl.defaultZone = http://eureka-peer1:8761/eureka/,http://eureka-peer2:8762/eureka/,http://eureka-peer3:8763/eureka/,http://eureka-peer4:8764/eureka/
 
 eureka.client.healthcheck.enabled = true
 management.endpoint.health.showDetails = ALWAYS
 eureka.instance.instanceId = ${spring.application.name}:${random.value}
 application.user.persistence.service = user-persistence-service
+application.acccess.authorizer = authorizer-service
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds = 20000
 hystrix.command.default.circuitBreaker.enabled = true
 # hystrix.command.default.circuitBreaker.errorThresholdPercentage = 90
