--- a/users-microservice/src/main/resources/application.properties
+++ b/users-microservice/src/main/resources/application.properties
@@ -1,20 +1,21 @@
-#porta aleatória = 0
+# porta aleatória = 0
 server.port = 8090
 application.services.apikey.name = api-key
 
-# eureka.client.serviceUrl.defaultZone = http://eureka-peer1:8764/eureka/
-eureka.client.serviceUrl.defaultZone = http://eureka-peer1:8761/eureka/,http://eureka-peer2:8762/eureka/,http://eureka-peer3:8763/eureka/,http://eureka-peer4:8764/eureka/
+eureka.client.serviceUrl.defaultZone = http://10.0.2.85:8761/eureka/
+# eureka.client.serviceUrl.defaultZone = http://eureka-peer1:8761/eureka/,http://eureka-peer2:8762/eureka/,http://eureka-peer3:8763/eureka/,http://eureka-peer4:8764/eureka/
 
 eureka.client.healthcheck.enabled = true
 management.endpoint.health.showDetails = ALWAYS
 eureka.instance.instanceId = ${spring.application.name}:${random.value}
 application.user.persistence.service = user-persistence-service
 application.acccess.authorizer = authorizer-service
-hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds = 20000
-hystrix.command.default.circuitBreaker.enabled = true
+document.persistence.service = document-persistence-service
+# hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds = 10000
+# hystrix.command.default.circuitBreaker.enabled = false
 # hystrix.command.default.circuitBreaker.errorThresholdPercentage = 90
-hystrix.command.default.circuitBreaker.requestVolumeThreshold = 10
-hystrix.command.default.circuitBreaker.sleepWindowInMilliseconds = 10000
+# hystrix.command.default.circuitBreaker.requestVolumeThreshold = 10
+# hystrix.command.default.circuitBreaker.sleepWindowInMilliseconds = 10000
 
 # management.endpoints.web.exposure.include = heapdump,liquibase,loggers,prometheus,threaddump,info,metrics,health
 
